--- a/public/stylesheets/templates/viewnotes-Template.css
+++ b/public/stylesheets/templates/viewnotes-Template.css
@@ -1,6 +1,7 @@
 #items {
 	width: 90%;
 	overflow: hidden;
+	overflow-y: auto;
 }
 
 #itemSection {
